restores unit-tests

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,9 @@ repositories {
 dependencies {
     compile 'com.github.samtools:htsjdk:2.13.2'    
     compile 'org.apache.commons:commons-compress:1.9'   
-    compile 'com.beust:jcommander:1.48'   
+    compile 'com.beust:jcommander:1.48'
+    compile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'
 }
 
 task wrapper(type: Wrapper) {
@@ -126,3 +128,18 @@ task 'deploy-yoda'( dependsOn: 'shadowJar' ) << {
 
 
 task 'deploy-all' { dependsOn  'deploy-oy', 'deploy-yoda' }
+
+
+test {
+
+    maxHeapSize = "1024m"
+
+    jvmArgs "-Dfile.encoding=UTF-8"
+
+    testLogging {
+
+        events "failed", "standardOut", "standardError"
+
+    }
+
+}
