--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,7 @@
 # This is the Gradle build system for JVM applications
 # https://gradle.org/
 # https://github.com/gradle/gradle
-#image: gradle:5.2.1-jdk8
-image: gradle
+image: gradle:5.2.1-jdk8
 
 
 # Disable the Gradle daemon for Continuous Integration servers as correctness
@@ -17,7 +16,7 @@ before_script:
   - export GRADLE_USER_HOME=`pwd`/.gradle
 build:
   stage: build
-  script: ./gradlew --build-cache assemble
+  script: gradle --build-cache assemble
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: push
@@ -29,7 +28,7 @@ build:
 test:
   stage: test
   script:
-   - ./gradlew test --info
+   - gradle test --info
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: pull
